<resources>


<!--    Éléments de la vue Main     -->
    <string name="selected_year">Année séléctionnée : %d</string>
    <string name="chip_single_year">Pour l\'année </string>

    <string name="chip_minimum_year">A partir de l\'année </string>


<!--    Éléments de la vue Mutation     -->
    <string name="app_name">PrixImmo</string>
    <string name="parcelle_title">Adresse sélectionnée :\n
        %s</string>
    <plurals name="nb_mutation">
        <item quantity="zero">%d mutation trouvée</item>
        <item quantity="other">%d mutations trouvées</item>
    </plurals>
    <string name="libTypBien">Type de bien : %s</string>
    <string name="valeurFonciere">Valeur foncière : %s €</string>
    <string name="dateCession">Date de cession : %s</string>
    <string name="surfaceBien">Surface : %d m²</string>
    <string name="nombreLot">Nombre de lot : %d</string>
    <string name="venteVEFA">Vefa : %b</string>
    <string name="referenceParcelle">Parcelle : %s</string>

<!--  Éléments de la vue FilterMutation  -->
    <string name="prix_min">Valeur minimale</string>
    <string name="prix_max">Valeur maximale</string>
    <string name="lot_1"> 1 </string>
    <string name="lot_2"> 2 </string>
    <string name="lot_3"> 3</string>
    <string name="lot_4">4+</string>
    <string name="surface_min">%d m²</string>
    <string name="surface_max">%d m²</string>
    <string name="date_mutation">Année minimale de mutation : %d</string>

</resources>